@@ -14,9 +14,19 @@
 //
 ?>
 <?php
+
 includeHtmlWrap("wrapper.header");
 global $title;
-if(!includeTemplate('slideshow.header.tpl')) {
+
+if (!includeTemplate('slideshow.header.tpl')) {
+    if(!isset($newstyle)) {
+?>
+  <div class="g-header">
+    <div class="g-pagetitle"><?php echo $title ?></div>
+  </div>
+<?php
+    }
+    else {
 ?>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
@@ -44,6 +54,7 @@ if(!includeTemplate('slideshow.header.tpl')) {
 </tr>
 <tr>
 	<td  align="center" valign="top">
-<?php 
+<?php
+    }
 }
 ?>
