@@ -2,17 +2,17 @@
 /*
  * Gallery - a web based photo album viewer and editor
  * Copyright (C) 2000-2006 Bharat Mediratta
- * 
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at
  * your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
@@ -28,7 +28,7 @@
  *    browsers, so try not to introduce any new functions.  It's better
  *    to have reduced functionality here than have it broken on some
  *    browsers.  If you MUST add new JS, research it thoroughly to make
- *    sure it should work with ancient browsers, but better to only 
+ *    sure it should work with ancient browsers, but better to only
  *    change the JS to fix bugs.
  *
  *       Thanks
@@ -36,7 +36,7 @@
 ?>
 <?php
 
-list($slide_index, $slide_pause, $slide_full, $slide_dir, $slide_loop) = 
+list($slide_index, $slide_pause, $slide_full, $slide_dir, $slide_loop) =
   getRequestVar(array('slide_index', 'slide_pause', 'slide_full', 'slide_dir', 'slide_loop'));
 
 function slideshow_initialize() {
@@ -49,7 +49,7 @@ function slideshow_initialize() {
 	$defaultPause = 3;
 	$defaultFull = 0;
 	$defaultDir = 1;
-	
+
 	if (!isset($slide_index)) {
 	    $slide_index = 1;
 	}
@@ -65,11 +65,11 @@ function slideshow_initialize() {
 	if (!isset($slide_dir)) {
 	    $slide_dir = $defaultDir;
 	}
-	
+
 	if ($slide_full && !$gallery->user->canViewFullImages($gallery->album)) {
 	    $slide_full = 0;
 	}
-	
+
 	$bgcolor = $gallery->album->fields['bgcolor'];
 	$title = _("Slide Show for album") ." :: ". $gallery->album->fields["title"];
 }
@@ -96,9 +96,9 @@ function slideshow_body() {
 			$photoURL, $caption, $imageDir, $pixelImage, $number;
 ?>
 <script type="text/javascript">
-var timer; 
+var timer;
 var current_location = <?php echo $slide_index ?>;
-var next_location = <?php echo $slide_index ?>; 
+var next_location = <?php echo $slide_index ?>;
 var pics_loaded = 0;
 var onoff = 0;
 var timeout_value;
@@ -111,18 +111,18 @@ var direction = <?php echo $slide_dir ?>;
 <?php
 
 $numPhotos = $gallery->album->numPhotos(1);
-$numDisplayed = 0; 
+$numDisplayed = 0;
 
 // A slideshow_length of 0 means "show all"
 // as does a length which is greater than the number of photos
 if ($number == 0 || $number > $numPhotos) {
-        $number = $numPhotos; 
-}       
+        $number = $numPhotos;
+}
 
 // Find the correct starting point, accounting for hidden photos
 $index = getNextPhoto(0);
 $photo_count = 0;
-while ($numDisplayed < $numPhotos && $numDisplayed < $number) { 
+while ($numDisplayed < $numPhotos && $numDisplayed < $number) {
     if ($index > $numPhotos) {
 	/*
 	 * We went past the end -- this can happen if the last element is an
@@ -165,7 +165,7 @@ while ($numDisplayed < $numPhotos && $numDisplayed < $number) {
     $index = getNextPhoto($index);
 }
 ?>
-var photo_count = <?php echo $photo_count ?>; 
+var photo_count = <?php echo $photo_count ?>;
 
 function stop() {
     onoff = 0;
@@ -222,13 +222,13 @@ function go_to_next_page() {
 				array('set_albumName' => $gallery->session->albumName, 'mode' => 'low')); ?>";
 
     document.location = slideShowUrl + "&slide_index=" + next_location + "&slide_full=" + full
-	+ "&slide_loop=" + loop + "&slide_pause=" + (timeout_value / 1000) 
+	+ "&slide_loop=" + loop + "&slide_pause=" + (timeout_value / 1000)
 	+ "&slide_dir=" + direction;
     return 0;
 }
 
 function preload_next_photo() {
-    
+
     /* Calculate the new next location */
     next_location = (parseInt(current_location) + parseInt(direction));
     if (next_location > photo_count) {
@@ -243,7 +243,7 @@ function preload_next_photo() {
 	    stop();
 	}
     }
-    
+
     /* Preload the next photo */
     preload_photo(next_location);
 }
@@ -257,7 +257,7 @@ function show_current_photo() {
 	preload_photo(current_location);
 	return 0;
     }
-    
+
     return 1;
 }
 
@@ -272,7 +272,7 @@ function preload_photo(index) {
 	    images[index].src = photo_urls[index];
 	    pics_loaded++;
 	}
-    } 
+    }
 }
 
 </script>
@@ -287,11 +287,11 @@ function slideshow_controlPanel() {
 		$bgcolor, $title, $gallery, $numPhotos, $numDisplayed,
 		$index, $photo_count, $photo, $image, $thumbImage,
 		$photoURL, $caption, $imageDir, $pixelImage;
-     global $playIconText,$stopIconText,$delayIconText, $forwardIconText, 
+     global $playIconText,$stopIconText,$delayIconText, $forwardIconText,
 		$backwardIconText, $normalSizeIconText, $fullSizeIconText,
 		$loopIconText;
 ?>
-<form name="TopForm" style="margin:0px">
+<form name="TopForm">
 <?php
     $iconElements[] = '<a href="#" onClick="stop(); return false;">'. $stopIconText .'</a>';
     $iconElements[] = '<a href="#" onClick="play(); return false;">'. $playIconText .'</a>';
@@ -322,7 +322,7 @@ if ($gallery->user->canViewFullImages($gallery->album)) {
 				60 => _("1 Minute")),
 				$defaultPause, // default value
 				1, // select size
-				array('onchange' => 'reset_timer()', 'class' => 'adminform')
+				array('onchange' => 'reset_timer()', 'class' => 'g-admin')
 			);
 
 if ($loop) {
@@ -350,21 +350,14 @@ function slideshow_image() {
 <?php
 if ($photo_count > 0) {
 ?>
-
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-	<td>
 	<script type="text/javascript">
-	    document.write("<img border==<?php echo $borderwidth ?> bgcolor=<?php echo $borderColor ?> src="+photo_urls[<?php echo $slide_index ?>]+" name=slide>");
+	    document.write("<img border=<?php echo $borderwidth ?> bgcolor=<?php echo $borderColor ?> src="+photo_urls[<?php echo $slide_index ?>]+" name=slide>");
 	</script>
-</tr>
-</table>
-
 <br>
 
 <script type="text/javascript">
 /* show the caption either in a nice div or an ugly form textarea */
-document.write("<div class='pcaption'>" + "[" + current_location + " <?php echo _("of") ?> " + photo_count + "] " + photo_captions[<?php echo $slide_index ?>] + "</div>");
+document.write("<div class='g-photo-caption'>" + "[" + current_location + " <?php echo _("of") ?> " + photo_count + "] " + photo_captions[<?php echo $slide_index ?>] + "</div>");
 
 /* Start the show. */
 play();
@@ -372,20 +365,11 @@ play();
 </script>
 
 <?php
-} else {
+	}
+	else {
+		echo "<p><b>". _("This album has no photos to show in a slide show.") ."</b></p>";
+	}
 ?>
-
-<br><b><?php echo _("This album has no photos to show in a slide show.") ?></b>
-<br><br>
-<span class="admin">
-<a href="<?php echo makeGalleryUrl("view_album.php",
-array("set_albumName" => $gallery->session->albumName)) ?>">[<?php echo _("back to album") ?>]</a>
-</span>
-
-<?php
-}
-?> 
-
 </div>
 
 <?php } ?>
